// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render snapshot button if it's a snapshot 1`] = `
<div
  className="sc-AxjAm eiUTii"
>
  <div
    className="sc-AxirZ bjVvEc"
  >
    <span
      className="sc-AxiKw gLbQtm"
    />
  </div>
</div>
`;

exports[`shows snapshot url 1`] = `
<div
  className="sc-AxjAm eiUTii"
>
  <div
    className="sc-AxirZ bjVvEc"
  >
    <span
      className="sc-AxiKw gLbQtm"
    />
  </div>
  <button
    className="sc-Axmtr cXZHVw snapshotButton "
    onClick={[Function]}
  >
    <svg
      className="sc-AxmLO cYcYrk"
    >
      snapshot.svg
    </svg>
    <span>
      Create a 
      <br />
      Snapshot
    </span>
  </button>
</div>
`;
